clusters/danto/platform/dns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hickory-dns
spec:
  selector:
    app: hickory-dns
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
