clusters/danto/platform/dns/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: hickory-dns-tcp
spec:
  ingressClassName: traefik
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: hickory-dns
          port: dns-tcp
